# news-paper

./: .dockerignore  Dockerfile  README.md  comment.sql  pyproject.toml  requirements.txt
Templates/: article_delete.html  article_detail.html  article_edit.html  article_list.html  article_new.html
Templates/registration/: logout.html  password_change_form.html  password_reset_form.html  signup.html
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
articles/: admin.py  forms.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_comment.py
django_project/: settings.py  urls.py
templates/: base.html  home.html
templates/registration/: login.html  password_change_done.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
