[project]
name = "news-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "black==24.4.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "crispy-bootstrap5==2024.2",
    "dj-database-url==3.1.0",
    "dj-email-url==1.0.6",
    "django==5.0.6",
    "django-cache-url==3.4.6",
    "django-crispy-forms==2.2",
    "environs==11.0.0",
    "marshmallow==4.2.1",
    "mypy-extensions==1.0.0",
    "packaging==24.1",
    "pathspec==0.12.1",
    "platformdirs==4.2.2",
    "python-dotenv==1.2.1",
    "sqlparse==0.5.0",
    "tzdata==2025.3",
    "whitenoise==6.7.0",
]
